--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "BravaisLattices"
 uuid = "6a0dcac4-263d-11e9-219b-2bfcac5c9afc"
 authors = ["C. Naaktgeboren <NaaktgeborenC.PhD@gmail.com>"]
 version = "0.0.0"
+
+[deps]
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
